--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,10 +14,10 @@ spec:
     spec:
       containers:
         - name: web
-          image: tailspinspacegameprod.azurecr.io/web
+          image: tailspinspacegamenobl.azurecr.io/web
           ports:
           - containerPort: 80
----
+
 apiVersion : apps/v1
 kind: Deployment
 metadata:
@@ -34,6 +34,6 @@ spec:
     spec:
       containers:
         - name: leaderboard
-          image: tailspinspacegameprod.azurecr.io/leaderboard
+          image: tailspinspacegamenobl.azurecr.io/leaderboard
           ports:
           - containerPort: 80
